--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -7,6 +7,7 @@
     "name": "nombre del usuario",
     "content": "cuerpo del mensaje",
     "subject": "asunto del mensaje",
+    "Not found projects": "No se encontraron proyectos",
     "A fresh verification link has been sent to your email address.": "Se ha enviado un nuevo enlace de verificación a su correo electrónico.",
   "All rights reserved.": "Todos los derechos reservados.",
   "Before proceeding, please check your email for a verification link.": "Antes de continuar, por favor, confirme su correo electrónico con el enlace de verificación que le fue enviado.",
