Recuperar un proyecto específico de la base de datos

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -2,7 +2,7 @@
     "Home": "Inicio",
     "Contact": "Contacto",
     "About": "Acerca de Nosotros",
-    "Portfolio": "Portafolio",
+    "Projects": "Proyectos",
     "Send": "Enviar",
     "name": "nombre del usuario",
     "content": "cuerpo del mensaje",
