Seeders, Factories e información de contacto

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -1,7 +1,7 @@
 {
     "Home": "Inicio",
     "Contact": "Contacto",
-    "About": "Acerca de Nosotros",
+    "About": "Quien soy",
     "Projects": "Proyectos",
     "Send": "Enviar",
     "name": "nombre del usuario",
